log

10 Mar 2022 20:05:43: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
eb23614
10 Mar 2022 20:06:30: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d02e951
10 Mar 2022 20:22:13: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:42:20: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
   42 |    *(suma) = sumaN(*(a + tamano), n);
      |                    ^~~~~~~~~~~~~
      |                    |
      |                    int
exercises.c:21:15: note: expected 'int *' but argument is of type 'int'
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1032a24
